fixed minor spacing

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -48,6 +48,7 @@
     font-size: 2.5em;
     font-weight: bold;
     font-style: italic;
+    margin-bottom: 0.15em;
     color: $primary-text-color;
   }
 
